update  ": feat -> dashboard, setor, artikel fix
