# src/routes/manajemenAkunRoutes.js
@@ -5,6 +5,7 @@ const { verifyToken, checkRole } = require("../middleware/authMiddleware");
 
 router.use(verifyToken, checkRole([1]));
 router.get("/", manajemenAkunController.getAllUsers);
+router.get("/:id_user", manajemenAkunController.getAkunDetail);
 router.post("/", manajemenAkunController.createUserAccount);
 router.put("/:id_user", manajemenAkunController.updateUser);
 router.delete("/:id_user", manajemenAkunController.deleteUser);
